# tmnt-bot

./: .gitignore  Cargo.toml  README.md
src/: arg_parse.rs  config_parse.rs  json_cfg.rs  main.rs  sample.tmnt.json
