# Refs:
# - https://doc.rust-lang.org/cargo/reference/manifest.html
# - https://doc.rust-lang.org/cargo/guide/project-layout.html
# - https://doc.rust-lang.org/cargo/reference/cargo-targets.html

[package]
name = "tmnt-bot"
version = "0.1.0"
authors = ["🎷🐛 Lee Ball <lee.cat.ball@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/catleeball/tmnt-bot"
repository = "https://github.com/catleeball/tmnt-bot"
description = "Make a TMNT logo of a Wikipedia title that you can sing to the TMNT themesong."

[dependencies]
clap = "^2.33.1"
serde = { version = "^1.0", features = ["derive"] }
# simdjson-rust = {git = "https://github.com/SunDoge/simdjson-rust"}
# mimalloc = "*"
toml = "^0.5.6"
webscreenshot = "^0.2.2"
